--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,66 @@
-html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: rgb(220, 250, 220);
+}
+::-webkit-scrollbar {
+  display: none;
+}
+h1 {
+  text-align: center;
 }
 
 a {
-  color: inherit;
+  color: black;
   text-decoration: none;
+  margin: 10px;
 }
 
-* {
-  box-sizing: border-box;
+nav {
+  border-bottom: 1px solid gray;
+  padding: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+main {
+  padding: 10px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 0;
+}
+
+li {
+  border: 1px solid gray;
+  border-radius: 10px;
+  width: 120px;
+  height: 120px;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  background: white;
+}
+
+li img {
+  width: 50%;
+}
+
+footer {
+  text-align: center;
+  border-top: 1px solid gray;
+  padding: 20px;
+  font-size: 0.8rem;
+  color: gray;
+}
+
+.detail {
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.detail img {
+  width: 80%;
 }
